css/recipes.css
body {
  display: flex;
  flex-direction: column;
  background-color: #eddaca;
}

.skip-link {
  z-index: 3;
}

.header-logo {
  z-index: 2;
}

.header-logo div {
  background:
      url('../img/hat-and-spoon.png')
      100% -5px / 140px 120px
      no-repeat;
}

.header-logo a {
  background-color: #ffffffe6;
}

nav {
  position: sticky;
  top: -96px;
  z-index: 1;
  transition:
      top
      375ms
      cubic-bezier(0.45, 0.05, 0.55, 0.95);
}

nav ul {
  display: flex;
  flex-wrap: wrap;
  margin: 0 auto;
  padding: 0;
  max-width: 800px;
  list-style: none;
  box-shadow: 0 5px 10px #00000026;
}

nav li {
  flex: 1;
}

nav a {
  display: flex;
  align-items: center;
  padding: 0.5rem 1rem;
  font-family: 'Playfair Display', serif;
  text-decoration: none;
  white-space: nowrap;
  background-color: #9a4c67;
  border: 1px solid #44222e36;
  color: #fff;
}

nav a:focus {
  outline-color: #fff;
  outline-offset: -6px;
}

nav a:hover {
  background-color: #783b50;
}

nav a:active {
  background-color: #552a39;
}

nav li:first-child a {
  justify-content: flex-start;
}

nav li:last-child a {
  justify-content: flex-end;
}

nav a span {
  transform: scale(1.25) translateX(0);
  transition: transform 200ms ease-in-out;
}

nav li:first-child a:hover span {
  transform: scale(1.25) translateX(-3px);
}

nav li:last-child a:hover span {
  transform: scale(1.25) translateX(3px);
}

main {
  flex: 1;
  width: 100%;
}

main h1 {
  margin-top: 0;
  text-align: center;
}

main article {
  margin: 0 auto;
  padding: 1rem 1.5rem 0;
  max-width: 800px;
  border-left: 1px solid transparent;
  border-right: 1px solid transparent;
  transition:
      border-left-color 150ms linear,
      border-right-color 150ms linear;
}

.description {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 1rem;
}

.description img {
  width: 100%;
  max-width: 350px;
  border-radius: 6px;
  border: 4px solid #141414;
  object-fit: cover;
}

.description h2,
.description p {
  margin: 0;
}

.description p {
  font-style: italic;
}

.recipe-details {
  display: flex;
  justify-content: center;
  padding: 1rem 0;
  width: 100%;
  border-top: 1px solid #42240b63;
  border-bottom: 1px solid #42240b63;
}

.recipe-details table {
  width: 350px;
  border-collapse: collapse;
}

.recipe-details caption {
  margin-bottom: 1rem;
}

.recipe-details tbody {
  white-space: nowrap;
}

.recipe-details tr:not(:last-child) {
  border-bottom: 1px solid #42240b63;
}

.recipe-details th,
.recipe-details td {
  padding: 0.5rem;
}

.recipe-details th {
  font-family: 'Playfair Display', serif;
  text-align: left;
}

.ingredients-and-steps {
  display: flex;
  flex-wrap: wrap;
  gap: 0 2rem;
}

.ingredients-and-steps > section {
  flex: 1 1 220px;
}

.ingredients-and-steps ul,
.ingredients-and-steps ol {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.ingredients-and-steps ul li::before,
.ingredients-and-steps ol li::marker {
  font-weight: bold;
}

.ingredients-and-steps ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.ingredients-and-steps ul li::before {
  content: "✥";
  margin-right: 8px;
}

.ingredients-and-steps ol {
  margin: 0 0 0 1rem;
  padding: 0;
}

.ingredients-and-steps ol li {
  padding-left: 5px;
}

.ingredients-and-steps ol li::marker {
  font-family: "Playfair Display", serif;
  font-weight: bold;
}

footer div {
  justify-content: space-between;
}

footer p,
footer a {
  color: #141414;
}

footer p {
  margin: 0;
}

footer a:focus {
  outline-color: #141414;
}

footer p a:hover {
  text-decoration: none;
  background-color: #d6abba;
  color: #42240b;
}

footer p a:active {
  background-color: #ddbbc7;
  color: #42240b;
}

@media only screen and (min-width: 800px) {
  main article {
    border-left: 1px solid #42240b63;
    border-right: 1px solid #42240b63;
  }
}

